--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "@tabler/icons-react": "^3.34.0",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
@@ -19,13 +20,13 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.513.0",
     "mongoose": "^8.15.1",
-    "motion": "^12.16.0",
+    "motion": "^12.17.1",
     "next": "15.3.3",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
