--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "@tabler/icons-react": "^3.34.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/jsonwebtoken": "^9.0.9",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -23,13 +25,12 @@
     "motion": "^12.17.1",
     "next": "15.3.3",
     "nodemailer": "^7.0.3",
+    "postcss": "^8.4.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.0.0",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
